--- a/css/quiz-style.css
+++ b/css/quiz-style.css
@@ -24,7 +24,8 @@ body
 {
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
+    text-align: center;
     min-height: 15vh;
     flex-wrap: wrap;
     font-size: 5vh;
@@ -98,8 +99,8 @@ body
 {
     width: 90%;
     transform: translate(5%,-20px);
-    font-size:1.2vw;
-    color: rgba(0, 0, 0, 0.2);
+    font-size: 1.2vw;
+    color: rgb(0, 0, 0);
 }
 
 .container .card .content p
@@ -112,16 +113,9 @@ body
     transition: all 0.3s ease-in;
 }
 
-/* .cardclick.cardleft{
-    transform: scale(1.4) translate(60%, 20%); 
-}
-
-.cardclick.cardright{
-    transform: scale(1.4) translate(60%, -20%); 
-} */
-
-.cardclick{
-    transform: scale(1.4) translateY(30%); 
+.cardclick, .cardclick .cardleft, .cardclick .cardleft
+{
+    transform: scale(1.2) translateY(-40%); 
 }
 
 /* brings items before the shade */
@@ -134,19 +128,37 @@ body
 #background
 {
     height: 100vh;
-    width: 1000vh;
+    width: 100vw;
     position: absolute;
     background-color: rgba(0, 0, 0, 0.3);
     z-index: 2;
+    overflow: hidden;
+}
+
+.submit
+{   
+    position: absolute;
+    text-decoration: none;
+    background-color: rgb(79, 163, 79);
+    width: fit-content;
+    padding: 3vw;
+    border: 3px solid;
+    border-radius: 15px;
+    color: white;
+    left: 45vw;
+    top: 80vh;
+
 }
 
 
 @media screen and (max-width: 1000px) {
-    body {
+    body 
+    {
       background-color: lightgreen;
     }
 
-    .question {
+    .question 
+    {
         margin-bottom: 25vh;
     }
     
@@ -160,16 +172,19 @@ body
     {
         top: 2vw;
         right: 2vw;
-        font-size: 6vw;
+        font-size: 7vw;
     }     
     
     .container .card .content h3 
     {
         transform: translate(5%, -20px);
-        font-size:1.2vw;
-        color: rgba(0, 0, 0, 0.3);
+        font-size:1.5vw;
     }
-    
+
+    .cardclick, .cardclick .cardleft, .cardclick .cardleft
+    {
+        transform: scale(1.4) translateY(-30%); 
+    }
   }
 
 @media screen and (max-width: 800px) {
@@ -179,6 +194,9 @@ body
 
     .question {
         margin-bottom: 35vh;
+        font-size: 4vw;
+        text-align: center;
+        align-items: center;
     }
     
     .container .card 
@@ -192,7 +210,13 @@ body
         top: 2vw;
         right: 2vw;
         font-size: 6vw;
-    }      
+    }
+    
+    .cardclick, .cardclick .cardleft, .cardclick .cardleft
+    {
+        transform: scale(1.3) translateY(-30%); 
+    }
+
   }
 
 @media screen and (max-width: 450px) {
@@ -206,6 +230,9 @@ body
 
     .question {
         margin-bottom: 5vh;
+        font-size: 6vw;
+        text-align: center;
+        align-items: center;
     }
 
     .container .card 
@@ -225,8 +252,19 @@ body
     {
         transform: translate(5%, -20px);
         font-size:2.3vw;
-        color: rgba(0, 0, 0, 0.3);
     }  
+
+    .submit
+    {
+        padding: 5vw;
+        left: 40vw;
+    }
+
+    .cardclick, .cardclick .cardleft, .cardclick .cardleft
+    {
+        transform: scale(1.4) translateY(30%); 
+    }
+
   }
 
 @media screen and (max-width: 375px) {
@@ -240,6 +278,9 @@ body
 
     .question {
         margin-bottom: 10vh;
+        font-size: 6vw;
+        text-align: center;
+        align-items: center;
     }
 
     .container .card 
@@ -257,9 +298,18 @@ body
 
     .container .card .content h3 
     {
-        transform: translate(5%, -20px);
-        font-size:2vw;
-        color: rgba(0, 0, 0, 0.3);
+        transform: translate(5%, -10px);
+        font-size: 3vw;
     }  
+
+    .cardclick, .cardclick .cardleft, .cardclick .cardleft
+    {
+        transform: scale(1.4) translateY(25%); 
+    }
+
+    .submit
+    {
+        left: 37vw;
+    }
   }
   
